修复部分错误